@@ -2,6 +2,10 @@
 
 	TIP #323 IMPLEMENTATION (partial)
 
+	* doc/glob.n:		Revise [glob] to accept zero patterns.
+	* generic/tclFileName.c:
+	* tests fileName.test:
+
 	* doc/linsert.n:	Revise [linsert] to accept zero elements.
 	* generic/tclCmdIL.c:
 	* tests/linsert.test:
